# qzxsqualpel

./: .astylerc  .gitignore  CAddr.cpp  CAddr.h  CByte.cpp  CByte.h  CChunk.cpp  CChunk.h  CChunkList.cpp  CChunkList.h  CCommand.cpp  CCommand.h  CDisassembler.cpp  CDisassembler.h  CDisassemblerCoreZX.cpp  CDisassemblerCoreZX.h  CDisassemblerWidget.cpp  CDisassemblerWidget.h  CLabel.h  CLabels.cpp  CLabels.h  CLabelsWidget.cpp  CLabelsWidget.h  CMainWindow.cpp  CMainWindow.h  CMakeLists.txt  CReference.cpp  CReference.h  CWidgetChangeLabel.cpp  CWidgetChangeLabel.h  Doxyfile  IDisassemblerCore.h  disassemble.cpp  disassemble.h  img.qzx  img.raw  main.cpp  readme.txt  rom48k.qzg  xeno2.raw  (+2 more)
core/: CAddr.cpp  CAddr.h  CByte.cpp  CByte.h  CChunk.cpp  CChunk.h  CChunkList.cpp  CChunkList.h  CCommand.cpp  CCommand.h  CLabel.cpp  CLabel.h  CLabels.cpp  CLabels.h  CReference.cpp  CReference.h  IDisassemblerCore.cpp  IDisassemblerCore.h  addr.cpp  addr.h  arg.h  arg_default.h  arg_label.h  autocommenter.cpp  autocommenter.h  byte.cpp  byte.h  chunk.cpp  chunk.h  chunk_list.cpp  chunk_list.h  cmd_code.h  command.cpp  command.h  debug_printers.h  disassemble.cpp  disassemble1.cpp  disassembler_core.cpp  disassembler_core.h  flag.h  (+17 more)
files/: JsonHelper.cpp  JsonHelper.h  TapHeader.h  project.h
gui/: CDisassemblerWidget.cpp  CDisassemblerWidget.h  CLabelsWidget.cpp  CLabelsWidget.h  CMainWindow.cpp  CMainWindow.h  CWidgetChangeLabel.cpp  CWidgetChangeLabel.h  disassembler_widget.cpp  disassembler_widget.h  document_helper.cpp  document_helper.h  goto_address.ui  gui_text_block_user_data.h  gui_updater.h  guiblock.h  guiblocklist.h  guichunk.h  guichunklist.cpp  guichunklist.h  helper_widgets.h  labels_widget.cpp  labels_widget.h  main_window.cpp  main_window.h  make_array.ui  make_array_dlg.h  navigate_to_addr_dlg.h  navigation_stack.h  qt_debug_printers.h  text_view_printer.cpp  text_view_printer.h  widget_change_label.cpp  widget_change_label.h  widget_change_line.cpp  widget_change_line.h  widget_change_text.cpp  widget_change_text.h
memory/: addr.cpp  addr.h  memory.cpp  memory.h  reference.cpp  reference.h  segment.cpp  segment.h
postprocessors/: autocommenter.cpp  autocommenter.h  ipostprocessor.h  register_reference_scan.cpp  register_reference_scan.h  (+2 more)
tests/: CMakeLists.txt  instructions.cpp
(+13 files in other folders)
